// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/list/demo/basic.md correctly 1`] = `
<div
  class="ant-list ant-list-split"
>
  <div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-meta"
          >
            <div
              class="ant-list-item-meta-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="ant-list-item-meta-content"
            >
              <h4
                class="ant-list-item-meta-title"
              >
                <a
                  href="https://ant.design"
                >
                  Ant Design Title 1
                </a>
              </h4>
              <div
                class="ant-list-item-meta-description"
              >
                Ant Design, a design language for background applications, is refined by Ant UED Team
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-meta"
          >
            <div
              class="ant-list-item-meta-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="ant-list-item-meta-content"
            >
              <h4
                class="ant-list-item-meta-title"
              >
                <a
                  href="https://ant.design"
                >
                  Ant Design Title 2
                </a>
              </h4>
              <div
                class="ant-list-item-meta-description"
              >
                Ant Design, a design language for background applications, is refined by Ant UED Team
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-meta"
          >
            <div
              class="ant-list-item-meta-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="ant-list-item-meta-content"
            >
              <h4
                class="ant-list-item-meta-title"
              >
                <a
                  href="https://ant.design"
                >
                  Ant Design Title 3
                </a>
              </h4>
              <div
                class="ant-list-item-meta-description"
              >
                Ant Design, a design language for background applications, is refined by Ant UED Team
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-meta"
          >
            <div
              class="ant-list-item-meta-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="ant-list-item-meta-content"
            >
              <h4
                class="ant-list-item-meta-title"
              >
                <a
                  href="https://ant.design"
                >
                  Ant Design Title 4
                </a>
              </h4>
              <div
                class="ant-list-item-meta-description"
              >
                Ant Design, a design language for background applications, is refined by Ant UED Team
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/grid.md correctly 1`] = `
<div
  class="ant-list ant-list-split ant-list-grid"
>
  <div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-row"
          style="margin-left:-8px;margin-right:-8px"
        >
          <div
            class="ant-col-6"
          >
            <div
              class="ant-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="ant-list-item-content ant-list-item-content-single"
              >
                <div
                  class="ant-card ant-card-bordered"
                >
                  <div
                    class="ant-card-head"
                  >
                    <div
                      class="ant-card-head-wrapper"
                    >
                      <div
                        class="ant-card-head-title"
                      >
                        Title 1
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-col-6"
          >
            <div
              class="ant-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="ant-list-item-content ant-list-item-content-single"
              >
                <div
                  class="ant-card ant-card-bordered"
                >
                  <div
                    class="ant-card-head"
                  >
                    <div
                      class="ant-card-head-wrapper"
                    >
                      <div
                        class="ant-card-head-title"
                      >
                        Title 2
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-col-6"
          >
            <div
              class="ant-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="ant-list-item-content ant-list-item-content-single"
              >
                <div
                  class="ant-card ant-card-bordered"
                >
                  <div
                    class="ant-card-head"
                  >
                    <div
                      class="ant-card-head-wrapper"
                    >
                      <div
                        class="ant-card-head-title"
                      >
                        Title 3
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-col-6"
          >
            <div
              class="ant-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="ant-list-item-content ant-list-item-content-single"
              >
                <div
                  class="ant-card ant-card-bordered"
                >
                  <div
                    class="ant-card-head"
                  >
                    <div
                      class="ant-card-head-wrapper"
                    >
                      <div
                        class="ant-card-head-title"
                      >
                        Title 4
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/infinite-load.md correctly 1`] = `
<div
  class="demo-infinite-container"
>
  <div>
    <div
      class="ant-list ant-list-split"
    >
      <div>
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-list-empty-text"
            >
              No data
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/infinite-virtualized-load.md correctly 1`] = `
<div
  class="ant-list ant-list-split"
>
  <div>
    <div
      class="ant-spin"
    >
      <div
        class="ant-progress ant-progress-loading ant-progress-status-normal ant-progress-show-info ant-progress-default ant-spin-dot"
      >
        <div
          class="ant-progress-inner"
          style="width:30px;height:30px"
        >
          <svg
            viewBox="0 0 50 50"
          >
            <circle
              cx="25"
              cy="25"
              fill="none"
              r="20"
              stroke="#3367d6"
              stroke-width="4"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/loadmore.md correctly 1`] = `
<div
  class="ant-list demo-loadmore-list ant-list-split ant-list-loading ant-list-something-after-last-item"
>
  <div>
    <div
      class="ant-spin ant-spin-spinning"
    >
      <div
        class="ant-progress ant-progress-loading ant-progress-status-normal ant-progress-show-info ant-progress-default ant-spin-dot"
      >
        <div
          class="ant-progress-inner"
          style="width:30px;height:30px"
        >
          <svg
            viewBox="0 0 50 50"
          >
            <circle
              cx="25"
              cy="25"
              fill="none"
              r="20"
              stroke="#3367d6"
              stroke-width="4"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      style="text-align:center;margin-top:12px;height:32px;line-height:32px"
    >
      <button
        class="ant-btn ant-btn-flat"
        type="button"
      >
        <span>
          loading more
        </span>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/resposive.md correctly 1`] = `
<div
  class="ant-list ant-list-split ant-list-grid"
>
  <div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-row"
          style="margin-left:-8px;margin-right:-8px"
        >
          <div
            class="ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
          >
            <div
              class="ant-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="ant-list-item-content ant-list-item-content-single"
              >
                <div
                  class="ant-card ant-card-bordered"
                >
                  <div
                    class="ant-card-head"
                  >
                    <div
                      class="ant-card-head-wrapper"
                    >
                      <div
                        class="ant-card-head-title"
                      >
                        Title 1
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
          >
            <div
              class="ant-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="ant-list-item-content ant-list-item-content-single"
              >
                <div
                  class="ant-card ant-card-bordered"
                >
                  <div
                    class="ant-card-head"
                  >
                    <div
                      class="ant-card-head-wrapper"
                    >
                      <div
                        class="ant-card-head-title"
                      >
                        Title 2
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
          >
            <div
              class="ant-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="ant-list-item-content ant-list-item-content-single"
              >
                <div
                  class="ant-card ant-card-bordered"
                >
                  <div
                    class="ant-card-head"
                  >
                    <div
                      class="ant-card-head-wrapper"
                    >
                      <div
                        class="ant-card-head-title"
                      >
                        Title 3
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
          >
            <div
              class="ant-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="ant-list-item-content ant-list-item-content-single"
              >
                <div
                  class="ant-card ant-card-bordered"
                >
                  <div
                    class="ant-card-head"
                  >
                    <div
                      class="ant-card-head-wrapper"
                    >
                      <div
                        class="ant-card-head-title"
                      >
                        Title 4
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
          >
            <div
              class="ant-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="ant-list-item-content ant-list-item-content-single"
              >
                <div
                  class="ant-card ant-card-bordered"
                >
                  <div
                    class="ant-card-head"
                  >
                    <div
                      class="ant-card-head-wrapper"
                    >
                      <div
                        class="ant-card-head-title"
                      >
                        Title 5
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
          >
            <div
              class="ant-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="ant-list-item-content ant-list-item-content-single"
              >
                <div
                  class="ant-card ant-card-bordered"
                >
                  <div
                    class="ant-card-head"
                  >
                    <div
                      class="ant-card-head-wrapper"
                    >
                      <div
                        class="ant-card-head-title"
                      >
                        Title 6
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/simple.md correctly 1`] = `
<div>
  <h3
    style="margin-bottom:16px"
  >
    Default Size
  </h3>
  <div
    class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  >
    <div
      class="ant-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div>
      <div
        class="ant-spin-nested-loading"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-list-item"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              Racing car sprays burning fuel into crowd.
            </div>
          </div>
          <div
            class="ant-list-item"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              Japanese princess to wed commoner.
            </div>
          </div>
          <div
            class="ant-list-item"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              Australian walks 100km after outback crash.
            </div>
          </div>
          <div
            class="ant-list-item"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              Man charged over missing wedding girl.
            </div>
          </div>
          <div
            class="ant-list-item"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              Los Angeles battles huge wildfires.
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>
  <h3
    style="margin:16px 0"
  >
    Small Size
  </h3>
  <div
    class="ant-list ant-list-sm ant-list-split ant-list-bordered ant-list-something-after-last-item"
  >
    <div
      class="ant-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div>
      <div
        class="ant-spin-nested-loading"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-list-item"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              Racing car sprays burning fuel into crowd.
            </div>
          </div>
          <div
            class="ant-list-item"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              Japanese princess to wed commoner.
            </div>
          </div>
          <div
            class="ant-list-item"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              Australian walks 100km after outback crash.
            </div>
          </div>
          <div
            class="ant-list-item"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              Man charged over missing wedding girl.
            </div>
          </div>
          <div
            class="ant-list-item"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              Los Angeles battles huge wildfires.
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>
  <h3
    style="margin:16px 0"
  >
    Large Size
  </h3>
  <div
    class="ant-list ant-list-lg ant-list-split ant-list-bordered ant-list-something-after-last-item"
  >
    <div
      class="ant-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div>
      <div
        class="ant-spin-nested-loading"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-list-item"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              Racing car sprays burning fuel into crowd.
            </div>
          </div>
          <div
            class="ant-list-item"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              Japanese princess to wed commoner.
            </div>
          </div>
          <div
            class="ant-list-item"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              Australian walks 100km after outback crash.
            </div>
          </div>
          <div
            class="ant-list-item"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              Man charged over missing wedding girl.
            </div>
          </div>
          <div
            class="ant-list-item"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              Los Angeles battles huge wildfires.
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/vertical.md correctly 1`] = `
<div
  class="ant-list ant-list-vertical ant-list-lg ant-list-split ant-list-something-after-last-item"
>
  <div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-extra-wrap"
          >
            <div
              class="ant-list-item-main"
            >
              <div
                class="ant-list-item-meta"
              >
                <div
                  class="ant-list-item-meta-avatar"
                >
                  <span
                    class="ant-avatar ant-avatar-circle ant-avatar-image"
                  >
                    <img
                      src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                    />
                  </span>
                </div>
                <div
                  class="ant-list-item-meta-content"
                >
                  <h4
                    class="ant-list-item-meta-title"
                  >
                    <a
                      href="http://ant.design"
                    >
                      ant design part 0
                    </a>
                  </h4>
                  <div
                    class="ant-list-item-meta-description"
                  >
                    Ant Design, a design language for background applications, is refined by Ant UED Team.
                  </div>
                </div>
              </div>
              <div
                class="ant-list-item-content"
              >
                We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
              </div>
              <ul
                class="ant-list-item-action"
              >
                <li>
                  <span>
                    <i
                      class="icon icon-star-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="ant-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="icon icon-like-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="ant-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="icon icon-message"
                      style="margin-right:8px"
                    />
                    2
                  </span>
                </li>
              </ul>
            </div>
            <div
              class="ant-list-item-extra"
            >
              <img
                alt="logo"
                src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
                width="272"
              />
            </div>
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-extra-wrap"
          >
            <div
              class="ant-list-item-main"
            >
              <div
                class="ant-list-item-meta"
              >
                <div
                  class="ant-list-item-meta-avatar"
                >
                  <span
                    class="ant-avatar ant-avatar-circle ant-avatar-image"
                  >
                    <img
                      src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                    />
                  </span>
                </div>
                <div
                  class="ant-list-item-meta-content"
                >
                  <h4
                    class="ant-list-item-meta-title"
                  >
                    <a
                      href="http://ant.design"
                    >
                      ant design part 1
                    </a>
                  </h4>
                  <div
                    class="ant-list-item-meta-description"
                  >
                    Ant Design, a design language for background applications, is refined by Ant UED Team.
                  </div>
                </div>
              </div>
              <div
                class="ant-list-item-content"
              >
                We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
              </div>
              <ul
                class="ant-list-item-action"
              >
                <li>
                  <span>
                    <i
                      class="icon icon-star-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="ant-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="icon icon-like-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="ant-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="icon icon-message"
                      style="margin-right:8px"
                    />
                    2
                  </span>
                </li>
              </ul>
            </div>
            <div
              class="ant-list-item-extra"
            >
              <img
                alt="logo"
                src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
                width="272"
              />
            </div>
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-extra-wrap"
          >
            <div
              class="ant-list-item-main"
            >
              <div
                class="ant-list-item-meta"
              >
                <div
                  class="ant-list-item-meta-avatar"
                >
                  <span
                    class="ant-avatar ant-avatar-circle ant-avatar-image"
                  >
                    <img
                      src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                    />
                  </span>
                </div>
                <div
                  class="ant-list-item-meta-content"
                >
                  <h4
                    class="ant-list-item-meta-title"
                  >
                    <a
                      href="http://ant.design"
                    >
                      ant design part 2
                    </a>
                  </h4>
                  <div
                    class="ant-list-item-meta-description"
                  >
                    Ant Design, a design language for background applications, is refined by Ant UED Team.
                  </div>
                </div>
              </div>
              <div
                class="ant-list-item-content"
              >
                We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
              </div>
              <ul
                class="ant-list-item-action"
              >
                <li>
                  <span>
                    <i
                      class="icon icon-star-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="ant-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="icon icon-like-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="ant-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="icon icon-message"
                      style="margin-right:8px"
                    />
                    2
                  </span>
                </li>
              </ul>
            </div>
            <div
              class="ant-list-item-extra"
            >
              <img
                alt="logo"
                src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
                width="272"
              />
            </div>
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-extra-wrap"
          >
            <div
              class="ant-list-item-main"
            >
              <div
                class="ant-list-item-meta"
              >
                <div
                  class="ant-list-item-meta-avatar"
                >
                  <span
                    class="ant-avatar ant-avatar-circle ant-avatar-image"
                  >
                    <img
                      src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                    />
                  </span>
                </div>
                <div
                  class="ant-list-item-meta-content"
                >
                  <h4
                    class="ant-list-item-meta-title"
                  >
                    <a
                      href="http://ant.design"
                    >
                      ant design part 3
                    </a>
                  </h4>
                  <div
                    class="ant-list-item-meta-description"
                  >
                    Ant Design, a design language for background applications, is refined by Ant UED Team.
                  </div>
                </div>
              </div>
              <div
                class="ant-list-item-content"
              >
                We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
              </div>
              <ul
                class="ant-list-item-action"
              >
                <li>
                  <span>
                    <i
                      class="icon icon-star-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="ant-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="icon icon-like-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="ant-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="icon icon-message"
                      style="margin-right:8px"
                    />
                    2
                  </span>
                </li>
              </ul>
            </div>
            <div
              class="ant-list-item-extra"
            >
              <img
                alt="logo"
                src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
                width="272"
              />
            </div>
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-extra-wrap"
          >
            <div
              class="ant-list-item-main"
            >
              <div
                class="ant-list-item-meta"
              >
                <div
                  class="ant-list-item-meta-avatar"
                >
                  <span
                    class="ant-avatar ant-avatar-circle ant-avatar-image"
                  >
                    <img
                      src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                    />
                  </span>
                </div>
                <div
                  class="ant-list-item-meta-content"
                >
                  <h4
                    class="ant-list-item-meta-title"
                  >
                    <a
                      href="http://ant.design"
                    >
                      ant design part 4
                    </a>
                  </h4>
                  <div
                    class="ant-list-item-meta-description"
                  >
                    Ant Design, a design language for background applications, is refined by Ant UED Team.
                  </div>
                </div>
              </div>
              <div
                class="ant-list-item-content"
              >
                We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
              </div>
              <ul
                class="ant-list-item-action"
              >
                <li>
                  <span>
                    <i
                      class="icon icon-star-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="ant-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="icon icon-like-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="ant-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="icon icon-message"
                      style="margin-right:8px"
                    />
                    2
                  </span>
                </li>
              </ul>
            </div>
            <div
              class="ant-list-item-extra"
            >
              <img
                alt="logo"
                src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
                width="272"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-list-pagination"
    >
      <ul
        class="ant-pagination ant-pagination-tiny"
        unselectable="unselectable"
      >
        <li
          class="ant-pagination-options"
        >
          <span
            class="ant-pagination-options-label"
          >
            Items / page
          </span>
          <div
            class="ant-pagination-options-size-changer ant-select ant-select-has-value ant-select-enabled"
          >
            <div
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-select-selection
            ant-select-selection--single"
              role="combobox"
              tabindex="0"
            >
              <div
                class="ant-select-selection__rendered"
              >
                <div
                  class="ant-select-selection-selected-value"
                  style="opacity:1"
                  title="10"
                >
                  10
                </div>
                <span
                  class="ant-select-arrow"
                  style="user-select:none;-webkit-user-select:none"
                  unselectable="unselectable"
                >
                  <i
                    class="icon icon-arrow_drop_down"
                  />
                  <b />
                </span>
              </div>
            </div>
            <div
              class="ant-select-underline"
            >
              <span
                class="ant-select-ripple"
              />
            </div>
          </div>
        </li>
        <li
          class="ant-pagination-total-text"
        >
          1 - 5 / 5
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-disabled ant-pagination-first"
          title="First Page"
        >
          <button
            class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-first_page"
            />
            <div
              class="ant-ripple-wrapper"
            />
          </button>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-disabled ant-pagination-prev"
          title="Previous Page"
        >
          <button
            class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-navigate_before"
            />
            <div
              class="ant-ripple-wrapper"
            />
          </button>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-disabled ant-pagination-next"
          title="Next Page"
        >
          <button
            class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-navigate_next"
            />
            <div
              class="ant-ripple-wrapper"
            />
          </button>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-disabled ant-pagination-last"
          title="Last Page"
        >
          <button
            class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-last_page"
            />
            <div
              class="ant-ripple-wrapper"
            />
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
